--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,12 +1,12 @@
 {
   "pages": [
-    "pages/personal/personal",
-    "pages/personal/changeShop/changeShop",
-    "pages/myCard/myCard",
-    "pages/myCard/vipCard/vipCard",
-    "pages/myCard/makeCard/makeCard",
-    "pages/cashier/cashier"
-    
+    "pages/admin/personal/personal",
+    "pages/admin/personal/changeShop/changeShop",
+    "pages/admin/myCard/myCard",
+    "pages/admin/myCard/vipCard/vipCard",
+    "pages/admin/myCard/makeCard/makeCard",
+    "pages/admin/cashier/cashier",
+    "pages/admin/ranking/ranking"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -15,19 +15,22 @@
     "navigationBarTitleText": "商家端",
     "navigationBarTextStyle": "black"
   },
-  "tabBar":{ 
-    "list":[{
-        "pagePath": "pages/myCard/myCard",
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/admin/myCard/myCard",
         "text": "会员卡管理",
         "iconPath": "images/tabBar/card.png",
         "selectedIconPath": "images/tabBar/cardActive.png"
-      },{
-        "pagePath": "pages/cashier/cashier",
-        "text": "核销员管理",
+      },
+      {
+        "pagePath": "pages/admin/ranking/ranking",
+        "text": "排队进度",
         "iconPath": "images/tabBar/cashier.png",
         "selectedIconPath": "images/tabBar/cashierActive.png"
-      },{
-        "pagePath": "pages/personal/personal",
+      },
+      {
+        "pagePath": "pages/admin/personal/personal",
         "text": "商家信息",
         "iconPath": "images/tabBar/person.png",
         "selectedIconPath": "images/tabBar/personActive.png"
