--- a/project.config.json
+++ b/project.config.json
@@ -75,6 +75,13 @@
 					"id": -1,
 					"name": "pages/personal/personal",
 					"pathName": "pages/personal/personal",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/admin/personal/personal",
+					"pathName": "pages/admin/personal/personal",
 					"scene": null
 				}
 			]
