--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,19 +1,18 @@
 {
   "pages": [
-
     "pages/user/index/index",
     "pages/user/personal/personal",
     "pages/user/personal/vipCard/vipCard",
     "pages/user/personal/vipCard/record/record",
     "pages/user/time/time",
-
     "pages/admin/personal/personal",
     "pages/admin/personal/changeShop/changeShop",
     "pages/admin/myCard/myCard",
     "pages/admin/myCard/vipCard/vipCard",
     "pages/admin/myCard/makeCard/makeCard",
     "pages/admin/cashier/cashier",
-    "pages/admin/ranking/ranking"
+    "pages/admin/ranking/ranking",
+    "pages/user/personal/getVipCard/getVipCard"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
